# vtkplot

./: LICENSE  README.md  bounding_box_magnification.py  field_range_magnification.py  mesh_refinement_magnification.py  om6.lay  pyproject.toml  statistical_magnification.py  tecplot_vtk.py  variability_magnification.py  vtkplot.py
examples/: om6.lay
vtkplot/: __init__.py  cli.py  core.py
vtkplot/magnification/: __init__.py
